<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Learn Chinese</string>

    <!-- Category name for greetings [CHAR LIMIT=20] -->
    <string name="category_greetings">Greetings</string>
    <string name="hello_greeting">Hello</string>
    <string name="how_are_you_greeting">How are you?</string>
    <string name="i_am_fine_greeting">I\'m fine, thank you.</string>
    <string name="my_name_is_greeting">My name is...</string>
    <string name="nice_to_meet_you_greeting">Nice to meet you.</string>
    <string name="goodbye_greeting">Goodbye</string>
    <string name="speak_eng_question_greeting">Do you speak English?</string>
    <string name="yes_speak_eng_greeting">Yes, I speak English.</string>
    <string name="no_speak_eng_greeting">No, I don\'t speak English.</string>

    <!-- Category name for foods [CHAR LIMIT=20] -->
    <string name="category_foods">Foods</string>
    <string name="hungry_foods">hungry</string>
    <string name="thirsty_food">thirsty</string>
    <string name="eaten_enough_food">eaten enough</string>
    <string name="breakfast_food">breakfast</string>
    <string name="lunch_food">lunch</string>
    <string name="dinner_food">dinner</string>
    <string name="bread_food">bread</string>
    <string name="meat_food">meat</string>
    <string name="soup_food">soup</string>
    <string name="fruit_food">fruit</string>
    <string name="salad_food">salad</string>
    <string name="tea_food">tea</string>
    <string name="coffee_food">coffee</string>
    <string name="french_fries_food">french fries</string>
    <string name="sausage_food">sausage</string>
    <string name="cake_food">cake</string>
    <string name="cheese_food">cheese</string>
    <string name="apple_food">apple</string>
    <string name="orange_food">orange</string>
    <string name="banana_food">banana</string>
    <string name="sugar_food">sugar</string>
    <string name="salt_food">salt</string>
    <string name="pepper_food">pepper</string>


    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>
    <string name="white_color">white</string>
    <string name="black_color">black</string>
    <string name="red_color">red</string>
    <string name="yellow_color">yellow</string>
    <string name="green_color">green</string>
    <string name="blue_color">blue</string>
    <string name="brown_color">brown</string>
    <string name="orange_color">orange</string>
    <string name="grey_color">grey</string>
    <string name="pink_color">pink</string>
    <string name="purple_color">purple</string>


    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>
    <string name="one_numbers">one</string>
    <string name="two_numbers">two</string>
    <string name="three_numbers">three</string>
    <string name="four_numbers">four</string>
    <string name="five_numbers">five</string>
    <string name="six_numbers">six</string>
    <string name="seven_numbers">seven</string>
    <string name="eight_numbers">eight</string>
    <string name="nine_numbers">nine</string>
    <string name="ten_numbers">ten</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family</string>
    <string name="friend_family">friend</string>
    <string name="son_family">son</string>
    <string name="daughter_family">daughter</string>
    <string name="wife_family">wife</string>
    <string name="husband_family">husband</string>
    <string name="mother_family">mother</string>
    <string name="father_family">father</string>
    <string name="grandma_family">grandma</string>
    <string name="grandpa_family">grandpa</string>
    <string name="older_brother_family">older brother</string>
    <string name="younger_brother_family">younger brother</string>
    <string name="younger_sister_family">younger sister</string>
    <string name="older_sister_family">older sister</string>
</resources>
